--- a/src/fleximple-blocks-post/editor.scss
+++ b/src/fleximple-blocks-post/editor.scss
@@ -1,9 +1,34 @@
-/**
- * The following styles get applied inside the editor only.
- *
- * Replace them with your own styles or remove the file completely.
- */
+.wp-block[data-type="fleximple-blocks/post"] {
+	// Allows for the block to be selected
+	&:not(.is-selected)::before {
+		content: "";
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		z-index: 10;
+	}
+}
 
-.wp-block-fleximple-blocks-fleximple-blocks-post {
-	border: 1px dotted #f00;
+.fleximple-blocks-post__footer {
+	display: block !important;
+
+	& .fleximple-components-placeholder {
+		min-height: 100px;
+	}
+
+	& > .block-editor-inner-blocks > .block-editor-block-list__layout {
+		display: flex;
+		flex-direction: column;
+
+		& > * {
+			flex: 1;
+			margin: 0;
+		}
+	}
+}
+
+.fleximple-blocks-post__link-overlay {
+	display: none;
 }
