--- a/src/fleximple-blocks-post/style.scss
+++ b/src/fleximple-blocks-post/style.scss
@@ -1,12 +1,156 @@
-/**
- * The following styles get applied both on the front of your site
- * and in the editor.
- *
- * Replace them with your own styles or remove the file completely.
- */
+.fleximple-block-post {
+	display: flex;
+	flex-direction: column;
+	position: relative;
 
-.wp-block-fleximple-blocks-fleximple-blocks-post {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+	&.is-style-standard {
+	}
+
+	&.is-style-stacked {
+		flex-direction: column;
+		justify-content: center;
+
+		& .fleximple-block-post__media {
+			flex: 0 0 70%;
+			margin-bottom: 0;
+		}
+
+		& .fleximple-block-post__content {
+			flex: 0 0 40%;
+			padding: var(--space-125, 1.25rem);
+			margin-top: -5rem;
+			margin-left: var(--space-125, 1.25rem);
+			margin-right: var(--space-125, 1.25rem);
+			position: relative;
+			background-color: var(--white-rich);
+		}
+	}
+}
+
+.fleximple-block-post__media + .fleximple-block-post__content,
+.fleximple-block-post__content + .fleximple-block-post__media {
+	margin-top: 1rem;
+}
+
+.fleximple-block-post__media {
+	position: relative;
+}
+
+.fleximple-block-post__picture {
+	height: 0;
+	margin: 0 !important;
+	overflow: hidden;
+	display: block;
+}
+
+.fleximple-block-post__image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100% !important;
+	object-fit: cover;
+	vertical-align: middle; // Removes blank space below.
+	margin-bottom: 0;
+}
+
+.fleximple-block-post__audio {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	vertical-align: middle; // Removes blank space below.
+	z-index: 10;
+}
+
+.fleximple-block-post__content {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: var(--space-025, 0.5rem);
+}
+
+.fleximple-block-post__categories {
+	font-size: 13px;
+}
+
+.fleximple-block-post__category {
+	margin-right: var(--space-025, 0.5rem);
+	position: relative;
+	z-index: 1;
+	text-decoration: none;
+
+	&:last-child {
+		margin-right: 0;
+	}
+}
+
+.fleximple-block-post__title {
+	margin: 0;
+	line-height: 1.25;
+
+	a {
+		position: relative;
+		z-index: 1;
+		text-decoration: none;
+	}
+}
+
+.fleximple-block-post__kicker {
+	color: var(--color-primary, #5468ff);
+
+	&::after {
+		content: "\00A0\002F\00A0";
+		color: var(--gray-200);
+		display: inline-block;
+	}
+}
+
+.fleximple-block-post__meta {
+	font-size: 13px;
+	z-index: 1;
+
+	& > * {
+		display: inline-block;
+	}
+
+	& > * + * {
+		&::before {
+			content: "\a0\b7\a0";
+		}
+	}
+}
+
+.fleximple-block-post__excerpt {
+	font-size: var(--text-100, 1rem);
+	line-height: 1.5;
+
+	p {
+		margin: 0;
+	}
+}
+
+.fleximple-block-post__read-more {
+	font-size: var(--text-100, 1rem);
+	display: inline-block;
+	z-index: 1;
+}
+
+.fleximple-block-post__footer {
+	display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	margin-top: var(--space-050);
+
+	.fleximple-block-post__title {
+		font-size: var(--text-100, 1rem);
+	}
+}
+
+.fleximple-block-post__link-overlay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	opacity: 0;
 }
